# EyetrackResearchTools

./: .gitignore  README.md  Setup.txt.txt  libfreenect.txt
KinectAutoCalibration-master/: .cproject  .project  calibration_common.h  main.cpp
KinectAutoCalibration-master/Default/: Distortion_IR.xml  Distortion_RGB.xml  Intrinsics_IR.xml  Intrinsics_RGB.xml  kinect_R.xml  kinect_T.xml
KinectStuffForVarsha/: read_1st_README.txt.txt
RGBDemo-0.4.0-Win32/: kinect_calibration.yml
RGBDemo-0.4.0-Win32/calib_im_jpgs_home_kinect/: Calib_Results_ir.m  Calib_Results_ir.mat  Calib_Results_rgb.m  Calib_Results_rgb.mat  Calib_Results_stereo.mat  calib_data_ir.mat  calib_data_rgb.mat  params.txt
RGBDemo-0.4.0-Win32/calib_ims_home_kinect/: color_calib.xml  (+3 more)
calibration_ims/: Untitled.asv  Untitled.m
gnumex/: README
head_pose_estimation/: .cproject  .project  CMakeLists.txt  MY_README.txt.txt  head_pose_output.txt  head_pose_output_round_1_normal.txt  head_pose_output_round_2_slouch.txt  head_pose_output_round_3_ramrod.txt
head_pose_estimation/demo/: CMakeLists.txt  main.cpp  newmain.cpp
head_pose_estimation/my_build/: CMakeCache.txt  Makefile  cmake_install.cmake
head_pose_estimation/my_demo_build/: CMakeCache.txt  Makefile  cmake_install.cmake
head_pose_estimation/my_demo_build/head_pose_estimation_demo.dir/: CXX.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  flags.make  includes_CXX.rsp  link.txt  objects1.rsp
head_pose_estimation/nbproject/: Package-Default.bash  configurations.xml  project.xml
papers/: .directory
(+173 files in other folders)
